# huey-dashboard

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
openspec/: config.yaml
openspec/changes/archive/2026-03-11-fastapi-plugin-init/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-init-huey-dashboard-api/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-robust-testing/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-setup-dev-environment/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-track-huey-signals/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-11-use-ty-for-type-checking/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-13-add-debug-logging/: design.md  proposal.md  (+1 more)
openspec/specs/ci-cd-pipeline/: spec.md
openspec/specs/debug-logging/: spec.md
openspec/specs/dev-tools-setup/: spec.md
openspec/specs/external-connection-binding/: spec.md
openspec/specs/huey-api/: spec.md
openspec/specs/plugin-initialization/: spec.md
openspec/specs/static-analysis/: spec.md
openspec/specs/test-coverage/: spec.md
openspec/specs/websocket-updates/: spec.md
src/huey_dashboard/: __init__.py
src/huey_dashboard/api/: router.py
src/huey_dashboard/core/: config.py  dependencies.py
src/huey_dashboard/models/: task.py
src/huey_dashboard/services/: database.py  huey_service.py  signals.py  websocket_manager.py
tests/: test_database.py  test_endpoints.py  test_plugin.py  test_signals.py  test_websockets.py
(+16 files in other folders)
