[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "huey-dashboard"
version = "0.1.0"
description = "Huey Dashboard API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Greg Havekes" }
]
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "huey>=2.6.0",
    "pydantic-settings>=2.13.1",
    "psycopg[binary]>=3.2.0",
    "python-dotenv>=1.2.2",
    "redis>=7.3.0",
    "sqlalchemy[asyncio]>=2.0.38",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
]

[project.urls]
Repository = "https://github.com/ghavekes/huey-dashboard"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.ruff]
# Target version for code generation/linting
target-version = "py314"
line-length = 88

[tool.ruff.lint]
# Enable specific rule sets (e.g., Pyflakes, pycodestyle, isort)
select = ["E", "F", "I", "W", "UP"]
ignore = []

[tool.ruff.format]
# Standard formatting options
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ty.environment]
python-version = "3.14"
root = ["src"]

[tool.ty.rules]
all = "error"
deprecated = "warn"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
